# neocore

./: .env.example  .gitignore  .gitmodules  README.md  docker-compose.yml
.github/workflows/: publish-images.yml
config/smsf/: .env
docker/ausf/: Dockerfile
docker/scp/: Dockerfile
docker/sepp/: Dockerfile
docker/smf/: Dockerfile
docker/smsf/: Dockerfile
docker/upf/: Dockerfile
platform/api/: Cargo.toml
platform/api/src/: auth.rs  db.rs  lib.rs  main.rs  routes.rs  terraform.rs
platform/api/src/types/: mod.rs
platform/terraform/: cloud-init.yaml.tpl  main.tf  outputs.tf  variables.tf
scripts/: setup.sh  start.sh  test.sh  validate-env.sh
scripts/helpers/: common.sh
