[package]
name = "platform-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "platform-api"
path = "src/main.rs"

[[bin]]
name = "create-tenant"
path = "src/bin/create_tenant.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = "3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
